# gaze_tracking

./: CMakeLists.txt  README.md  package.xml
include/: blink_counter.h  camera_params.h  detect_face.h  dlib_face.h  gaze_tracking.h  head_pose_estimator.h
launch/: face_detection.launch
src/: blink_counter.cpp  dlib_face.cpp  gaze_tracking.cpp  head_pose_estimator.cpp  imagenes_rgbd.cpp  personal_calibration.cpp
